# playground

./: .gitignore  README.md
schnorr_identification_protocol/cpp/: CMakeLists.txt  build_and_run.sh  main.cpp  prover.cpp  prover.h  utils.cpp  utils.h  verifier.cpp  verifier.h
